--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <body>
         <!--Name, About Me, and Contact Me pages-->
-        <h1>Angelica Huang <a href = "assets/Angelica Huang CV (1).pdf"> CV (pdf)</a></h1>
+        <h1>Angelica Huang <a href = "assets/Angelica Huang CV (1).pdf"> CV (.pdf)</a></h1>
         <a href = "public/about.html">About Me</a>
         <a href = "public/contact.html">Contact Me</a>
         
@@ -119,7 +119,7 @@
         <hr/>
         <a href = "public/about.html">About Me</a>
         <a href = "public/contact.html">Contact Me</a>
-        <a href = "assets/Angelica Huang CV (1).pdf"> CV (pdf)</a>
+        <a href = "assets/Angelica Huang CV (1).pdf"> CV (.pdf)</a>
         <br/>
 
 
