--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
         <!--Education details-->
         <h3>EDUCATION:</h3>
-        <h4>University Of Auckland <br/>
+        <h4>University of Auckland <br/>
             Bachelor of Science majoring in Computer Science (2022 – 2025)</h4>
 
         <h5>Leadership Roles:
